Item #5761: fix for Sample Insert panel init selection in Parent Type input - plus some spacing and text updates from review from MattY

--- a/packages/querygrid/src/theme/samples.scss
+++ b/packages/querygrid/src/theme/samples.scss
@@ -1,3 +1,7 @@
 .sample-insert--header {
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+}
+
+.sample-insert--parent-label, .sample-insert--remove-parent {
+  padding-top: 7px;
 }
